--- a/environment_mac.yml
+++ b/environment_mac.yml
@@ -13,6 +13,7 @@ dependencies:
     - numpy==1.18.1
     - psutil==5.8.0
     - pytest==6.2.2
+    - pytest-benchmark==3.4.1
     - scipy==1.4.1
     - torch==1.5.0
     - torchvision==0.6.0
